# room-scout

./: .env.example  .gitignore  CLAUDE.md  PROJECT_LOG.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: scout.yml
src/room_scout/: __init__.py  __main__.py  cli.py  config.py  filters.py  models.py  notifier.py  scraper.py  storage.py
tests/: test_cli.py  test_filters.py  test_notifier.py  test_scraper.py  test_scraper_live.py  test_storage.py
tests/fixtures/: trento_sample.html
