[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "room-scout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
room-scout = "room_scout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/room_scout"]
